--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                         <img src="https://ik.imagekit.io/ij9blp5q7/Fachada.jpg?updatedAt=1756249997025" alt="Condomínio Essence" class="w-full h-full object-cover hover:scale-110 transition-transform duration-300">
                     </div>
 
-                    <h3 class="text-xl font-bold mb-3 remax-text-blue transition-colors duration-300 hover:text-red-500">Torres Premium</h3>
+                    <h3 class="text-xl font-bold mb-3 remax-text-blue transition-colors duration-300 hover:text-red-500">Essence</h3>
                     <p class="text-gray-600 mb-4 flex-grow">Empreendimento de alto padrão com vista para o rio e acesso fácil ao centro.</p>
                     <div class="flex items-center text-gray-500 mt-auto">
                         <i class="fas fa-map-marker-alt mr-2"></i>
@@ -712,6 +712,76 @@
         </div>
     </section>
 
+<!-- MaxFinance Gold Compacto e Elegante -->
+<section class="py-12 bg-yellow-50">
+    <div class="max-w-6xl mx-auto px-4">
+        <!-- Título -->
+        <div class="text-center mb-10">
+            <h2 class="text-3xl font-bold mb-2 text-gray-800">MAXFINANCE GOLD</h2>
+            <p class="text-lg text-gray-600" data-pt="Intermediação de Crédito Especializada" data-en="Specialized Credit Intermediation">
+                Intermediação de Crédito Especializada
+            </p>
+        </div>
+
+        <!-- Conteúdo -->
+        <div class="grid md:grid-cols-2 gap-8 items-center">
+            <!-- Cartão dourado -->
+            <div>
+                <div class="bg-gradient-to-br from-yellow-400 to-yellow-600 rounded-xl p-6 text-center text-white shadow-lg hover:shadow-xl transition">
+                    <i class="fas fa-university text-5xl mb-3"></i>
+                    <h3 class="text-xl font-bold mb-3" data-pt="Parceria com 10+ Bancos" data-en="Partnership with 10+ Banks">
+                        Parceria com 10+ Bancos
+                    </h3>
+                    <p class="text-sm opacity-90" data-pt="Encontramos a melhor solução de financiamento para si" data-en="We find the best financing solution for you">
+                        Encontramos a melhor solução de financiamento para si
+                    </p>
+                </div>
+            </div>
+
+            <!-- Texto detalhado -->
+            <div>
+                <h3 class="text-2xl font-bold mb-4 text-gray-800" data-pt="A Melhor Solução de Financiamento" data-en="The Best Financing Solution">
+                    A Melhor Solução de Financiamento
+                </h3>
+                <p class="text-base text-gray-600 mb-4" data-pt="A MaxFinance Gold é o nosso parceiro especializado em intermediação de crédito. Com acesso a mais de 10 bancos, garantimos que encontra as melhores condições de financiamento para o seu imóvel." data-en="MaxFinance Gold is our specialized credit intermediation partner. With access to over 10 banks, we guarantee you find the best financing conditions for your property.">
+                    A MaxFinance Gold é o nosso parceiro especializado em intermediação de crédito. Com acesso a mais de 10 bancos, garantimos que encontra as melhores condições de financiamento para o seu imóvel.
+                </p>
+
+                <div class="space-y-3">
+                    <div class="flex items-center">
+                        <i class="fas fa-check-circle text-green-500 mr-3 text-lg"></i>
+                        <span class="text-base" data-pt="Análise gratuita e sem compromisso" data-en="Free analysis without commitment">Análise gratuita e sem compromisso</span>
+                    </div>
+                    <div class="flex items-center">
+                        <i class="fas fa-check-circle text-green-500 mr-3 text-lg"></i>
+                        <span class="text-base" data-pt="Melhores taxas de juro do mercado" data-en="Best market interest rates">Melhores taxas de juro do mercado</span>
+                    </div>
+                    <div class="flex items-center">
+                        <i class="fas fa-check-circle text-green-500 mr-3 text-lg"></i>
+                        <span class="text-base" data-pt="Acompanhamento personalizado" data-en="Personalized follow-up">Acompanhamento personalizado</span>
+                    </div>
+                    <div class="flex items-center">
+                        <i class="fas fa-check-circle text-green-500 mr-3 text-lg"></i>
+                        <span class="text-base" data-pt="Aprovação rápida e eficiente" data-en="Fast and efficient approval">Aprovação rápida e eficiente</span>
+                    </div>
+                </div>
+
+                <div class="mt-6 flex gap-4">
+    <button class="bg-yellow-500 hover:bg-yellow-600 text-white px-6 py-3 rounded-lg font-semibold text-base transition" data-pt="Simular Crédito" data-en="Simulate Credit">
+        Simular Crédito
+    </button>
+
+    <button class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold text-base transition" data-pt="Transferir crédito" data-en="Transfer Credit">
+        Transferir crédito
+    </button>
+</div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
     <!-- Contact Section -->
     <section id="contato" class="section-padding bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -895,7 +965,7 @@
                 "developments.description": "Descubra os nossos empreendimentos mais recentes, desenvolvidos com os mais altos padrões de qualidade e sustentabilidade.",
                 "developments.project1": "Condomínio Luxury Gardens - Oeiras",
                 "developments.project2": "Residencial Mar Azul - Estoril",
-                "developments.project3": "Torres Premium - Almada",
+                "developments.project3": "Essence - Campanhã, Porto",
                 "developments.investmentTitle": "Investimento Seguro",
                 "developments.investmentText": "Empreendimentos com valorização garantida e localização privilegiada",
                 
@@ -1082,3 +1152,4 @@
 </body>
 
 </html>
+
