--- a/index.html
+++ b/index.html
@@ -320,9 +320,10 @@
                             <i class="fas fa-exchange-alt text-2xl mb-2"></i>
                             <h3 class="text-lg font-bold mb-1">Transferir Crédito</h3>
                             <p class="text-sm mb-2 opacity-90">Serviço GRATUITO</p>
-                            <button class="maxfinance-btn">
-                                Transferir
-                            </button>
+                            <a href="https://sufreire.github.io/simulador-transferencia-credito/" class="maxfinance-btn" target="_blank">
+                            <span data-translate="maxfinance.transfer.button">Transferir</span>
+                            </a>
+
                         </div>
                     </div>
                 </div>
@@ -1152,4 +1153,5 @@
 </body>
 
 </html>
+
 
